Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-9737

Duplicate error in replication with slave triggers and auto increment

Details

    Description

      Upstream bug also affects MariaDB 10.x:

      https://bugs.mysql.com/67504

      Fix seems to be an easy one liner:

      https://github.com/mysql/mysql-server/commit/0e78d1d8487ff10dd9415bd8c3114436d7bc1480

      Attachments

        Activity

          There are no comments yet on this issue.

          People

            serg Sergei Golubchik
            hholzgra Hartmut Holzgraefe
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.